Ranking implementado en swagger (falta hacerlo top)